<resources>
    <string name="app_name">TpTES 2</string>
    <string name="PowerStr">Навантаження</string>
    <string name="PowerIntStr">Відпуск/год</string>
    <string name="ButtonText">Оновити</string>
    <string name="PowerFull">Навантаження</string>
    <string name="inWorkText">В роботі:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
