<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <TextView
                android:text="@string/PowerStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp" />
            <TextView
                android:text="@string/PowerIntStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"/>
            <TextView
                android:text="@string/PowerFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"/>
            <TextView
                android:text="@string/inWorkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/TV_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:padding="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/TV_powerInt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:padding="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@id/TV_powerFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:padding="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@id/TV_inWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:padding="10dp"
                android:textSize="20sp"/>
        </LinearLayout>



    </LinearLayout>
    <Button
        android:id="@+id/B_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/ButtonText"/>

</LinearLayout>